# matplotlibcpp_heart_template

./: CMakeLists.txt  README.md  setup.bat  setup.sh
src/: CMakeLists.txt  main.cpp
